fix contacts wrap

--- a/ContactsApp.UI/src/app/components/contacts/contacts.component.scss
+++ b/ContactsApp.UI/src/app/components/contacts/contacts.component.scss
@@ -1,7 +1,8 @@
 .contact-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 3rem;
+    justify-content: center;
+    gap: 2rem;
     margin: 2rem 1rem;
 }
 
